Implement staff adding logic. Fix in scheduled task in reservation. Fix for images not being seen by the staff.